Added: change in the game developer and publisher fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=bestuser
 spring.datasource.password=bestuser
 #spring.main.allow-circular-references=true
 spring.jpa.generate-ddl=true
+#spring.mvc.format.date=yyyy-MM-dd
