--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mycourseworkdb?useSSL=false
 spring.datasource.username=bestuser
 spring.datasource.password=bestuser
 #spring.main.allow-circular-references=true
