Added: designed index

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=bestuser
 #spring.main.allow-circular-references=true
 spring.jpa.generate-ddl=true
 #spring.mvc.format.date=yyyy-MM-dd
+spring.devtools.restart.enabled=true
+#spring.web.resources.static-locations=file:/var/www/static,classpath:static
